# pypi-client

./: .gitignore  .mypy.ini  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  lint.yml  publish.yml  test.yml
pypi_client/: __init__.py  cli.py  github_auth.py  repo.py  service.py  types.py  user_config.py
pypi_client/types/: __init__.py  github_repo.py  pepy_tech.py  pypi_entry.py
pypi_search/: cli.py  repo.py  service.py
search/: pypi.py
tests/: __init__.py  test_github_auth.py  test_service.py
