[tool.poetry]
name = "pypi-client"
version = "0.2.3"
description = "PyPI command-line tool"
license = "MIT"
authors = ["Andrzej Bogdanowicz <bahdanovich@gmail.com>"]
readme = "README.md"
repository = "https://github.com/abahdanovich/pypi-client"
keywords = ["pypi", "client", "cli", "github", "search"]

packages = [
    { include="pypi_client", from="." },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/abahdanovich/pypi-client/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4"
tabulate = "^0.8.7"
requests = "^2.24.0"
lxml = "^4.6.1"
diskcache = "^5.0.3"
click = "^7.1.2"
appdirs = "^1.4.4"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pylint = "^2.6.0"
pytest = "^6.1.2"
requests-mock = "^1.8.0"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypi-client = 'pypi_client.cli:cli'
